--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -34,58 +34,28 @@ var cards;
 
 // @ts-ignore
 if (!ENV_BOOKSHOP_LIVE) {
-    // const tree = Astro.locals.tree;
-    // const data = Astro.locals.collections.pages;
-    // let collection = target.split(":")[0];
-    // if (!Object.keys(Astro.locals.collections).includes(collection))
-    //   collection = "pages";
-
     const data = Object.values(Astro.locals.collections).flat();
 
-    // const targetFragments = target
-    //     ?.split(":")
-    //     .at(-1)
-    //     ?.split("/")
-    //     .filter((frg) => frg !== "");
-
-    // let cursor = tree;
-    // if (!tree.children) return;
-
-    // if (targetFragments !== undefined) {
-    //     for (let i = 0; i < targetFragments.length; i++) {
-    //         if (
-    //             !(
-    //                 cursor?.children !== undefined &&
-    //                 targetFragments[i] in cursor.children
-    //             )
-    //         ) {
-    //             console.warn(`Could not resolve path ${target}`);
-    //             break;
-    //         }
-
-    //         cursor = cursor.children[targetFragments[i]];
-    //     }
-    // }
-
     let cursor = getTreeNode(Astro.locals.tree, target);
-    console.log("card-index", target, cursor);
     if (!cursor) return;
 
-    const slugs =
+    cards =
         cursor.children &&
-        Object.values(cursor.children).reduce<Set<string>>((obj, node) => {
-            if (node?.slug !== undefined && !node?.slug?.endsWith("index"))
-                obj.add(node?.slug);
-            return obj;
-        }, new Set());
-
-    cards = slugs && data.filter((node) => slugs.has(node.slug));
+        Object.values(cursor.children).reduce<typeof data & typeof cursor>(
+            (cards, card) => {
+                let cardData = data.find((d) => d.slug === card.slug);
+                cards.push({ ...cardData, ...card });
+                return cards;
+            },
+            [],
+        );
 
     cards?.sort(
         (a, b) =>
             b.data.publishDate.getTime() - a.data.publishDate.getTime() ||
             a.data.order - b.data.order,
     ); // Sort from newest to oldest, fall back on ascending order
+
     cards = cards?.slice(0, limit || undefined); // Limit number of cards if required
 } else {
     // Create placeholder cards for the live editor
