--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -4,9 +4,10 @@ import type { CollectionEntry } from "astro:content";
 import Image from "@shared/Image.astro";
 import Markdown from "@shared/Markdown.astro";
 import Icon from "@shared/icon.astro";
+import type { TreeNode } from "@mws-astro/middleware";
 
 interface Props {
-    card: CollectionEntry<CollectionKey>;
+    card: CollectionEntry<CollectionKey> & TreeNode;
     include: string[];
     filters: string[];
     aspect?: number;
@@ -48,7 +49,7 @@ function formatDate(date: Date) {
 ---
 
 <div class="card-index-card" {...filterData}>
-    {link && <a class="card-link" href={card.slug.replace(/\/?index$/, "")} />}
+    {link && <a class="card-link" href={card?.href} />}
     {
         thumbnail && (
             <div class="card-thumbnail">
