--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -6,19 +6,20 @@ const image = Astro.props.src;
 const { width = 256, height = 256, class: classes, title } = Astro.props;
 ---
 
-<figure class:list={classes}>
-    <Image {image} {width} {height} {...Astro.props} fit="contain" />
+<figure class:list={[classes, "aside"]}>
+    <Image
+        {image}
+        {width}
+        {height}
+        {...Astro.props}
+        fit="contain"
+        quality="mid"
+    />
     {title && <figcaption>{title}</figcaption>}
 </figure>
 
 <style>
-    figure {
-        width: 100%;
-        max-width: 40%;
-    }
-
     figcaption {
-        display: block;
         font-size: var(--text-size-medium);
         margin-top: 0.5em;
     }
@@ -34,7 +35,12 @@ const { width = 256, height = 256, class: classes, title } = Astro.props;
     figure.align-center {
         position: relative;
         float: none;
-        max-width: 100%;
-        height: 40rem;
+        margin: 3rem 0;
+    }
+</style>
+
+<style is:global>
+    figure.aside img {
+        max-height: 40rem;
     }
 </style>
