--- a/src/shared/astro/Video.astro
+++ b/src/shared/astro/Video.astro
@@ -18,13 +18,13 @@ if (url.hostname.endsWith("vimeo.com")) {
     url.pathname = url.pathname.replace(/^(\/.*\/)(\d*)$/, "/video/$2");
 
     if (background) {
-        url.searchParams.append("title", "0");
-        url.searchParams.append("byline", "0");
-        url.searchParams.append("portrait", "0");
+        // url.searchParams.append("title", "0");
+        // url.searchParams.append("byline", "0");
+        // url.searchParams.append("portrait", "0");
         url.searchParams.append("background", "1");
-        url.searchParams.append("autoplay", "1");
-        url.searchParams.append("muted", "1");
-        url.searchParams.append("loop", "1");
+        // url.searchParams.append("autoplay", "1");
+        // url.searchParams.append("muted", "1");
+        // url.searchParams.append("loop", "1");
     } else {
         url.searchParams.append("title", title ? "1" : "0");
         url.searchParams.append("byline", byline ? "1" : "0");
@@ -45,17 +45,24 @@ if (url.hostname.endsWith("vimeo.com")) {
         position: absolute;
         overflow: hidden;
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         inset: 0;
+        width: 100%;
+        height: 100%;
+        container: video-wrapper / size;
+
+        iframe {
+            position: absolute;
+            height: max(56.25cqw, 100cqh);
+            width: max(177.778cqh, 100cqw);
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 
     iframe {
-        // position: absolute;
-        // inset: 0;
-        flex: 0 0 100%;
         width: 100%;
-        aspect-ratio: 16 / 9;
+        height: auto;
+        aspect-ratio: 16/9;
     }
 </style>
